# protopractice

./: .gitignore  README.md  conversion.txt  gen.cpp  gen.h  graph.ipynb  main.cpp  parser.cpp  parser.h  person.pb.cc  person.pb.h  person.proto  threadpractice.cpp  timemap.txt
j2pb/: algo.txt  genwidget.cpp  widget.json  widget.pb.cc  widget.pb.h  widget.proto
jsonschema/: test.cpp
pythonjsontoschema/: electricschema.json  json_to_protobuf.py  schema.json
reference/: genfiles.cpp  integral.h  quicksort.h
repeatTesting/: gen.h  main.cpp  parser.cpp  parser.h  person.pb.cc  person.pb.h  person.proto
zzprof/: BS_thread_pool.hpp  CMakeLists.txt  codegen.py  main.cpp  main2.cpp  parser.cpp  parser.h  parsersamplegen.cpp  profile.pb.cc  profile.pb.h  profile.proto  profile2  sample.str  zz.prof:Zone.Identifier  zzprof_corr.txt
